packages/jsii/test/negatives/neg.static-member-mixing.2.ts
export class TheClass {
  public static funFunction() {
    // Empty
  }

  public funFunction() {
    // Empty
  }
}
